--- a/templates/home.html
+++ b/templates/home.html
@@ -1,35 +1,9 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
+{% block content %}
 <html lang="en">
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Coffee</title>
-	<!-- Google Font Family Link Start -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
-	<!-- Google Font Family Link End -->
 
-	<!-- CSS -->
-	<link href="{% static 'css/iconmoon.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<link href="{% static 'css/cs-coffee-plugin.css' %}" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet">
-	
-	<!-- JAVASCRIPT -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="{% static 'js/modernizr.js' %}"></script>
-	<script src="{% static 'js/bootstrap.js' %}"></script>
-
-	<style>
-		body, .main-section p, .mce-content-body p{
-			font:Normal  14px/24px "Open Sans", sans-serif;letter-spacing: 0px;text-transform: none;color: #f9f9f9 !important;
-		}
-	</style>
-</head>
 
 <body>
 	<!--Main Wrapper-->
@@ -206,7 +180,6 @@
 			</div>
 			<!-- Main Search End -->
 			
-			<!-- Top Restarurants Section Start -->
 			<div class="page-section nopadding cs-nomargin" style="margin-top: 0px;padding-top: 60px;padding-bottom: 0px;margin-bottom: 0px;background: #ffffff;">
 				<div class="container">
 					<div class="row">
@@ -265,7 +238,6 @@
 					</div>
 				</div>
 			</div>
-			<!-- Top Restarurants Section End -->
 			<!-- Choose From Most Popular Listin Start -->
 			<div class="page-section nopadding cs-nomargin" style="margin-top: 0px;padding-top: 60px;padding-bottom: 50px;margin-bottom: 0px;background: #ffffff;">
 				<div class="container">
@@ -392,9 +364,6 @@
 		<!-- Footer End -->
 	</div>
 	
-	<!-- Modal Popup End -->
-	<script src="{% static 'js/scripts.js' %}"></script>
-	<script src="{% static 'js/functions.js' %}"></script>
-</body>
 
-</html>
+{% endblock %}
+
