--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -30,7 +30,7 @@
                         <div class="login-option">
                             <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login</a> / 
                                 <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
-                                {% comment %}<a href="{% url 'registerVendor' %}" class="get-start-btn"> Register Cafe </a>{% endcomment %}
+                                {% comment %}<a href="{% url 'registerCoffee' %}" class="get-start-btn"> Register Cafe </a>{% endcomment %}
                         </div>
                     </div>
                 </div>
