--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,12 +9,12 @@
                     <div class="user-dashboard loader-holder" style="width: 450px; min-height:auto">
                         <div class="user-holder">
                     <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                    <p class="text-center">Order food online from your favourite restaurants </p>
+                    <p class="text-center">Order coffee online from your favourite cafes </p>
                     <hr>
-                    <div id="restaurant-sets-holder">
-                        <form action="{% url 'login' %}" class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data">
+                    <div id="cafe-sets-holder">
+                        <form action="{% url 'login' %}" class="form-fields-set coffeebakery-dev-cafe-form" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
+                            <ul class="register-add-cafe-tab-container cafe-information-tab-container">
                                 <li>
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -40,7 +40,7 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="field-holder">
                                                 <div class="payment-holder">
-                                                    <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
+                                                    <input type="submit" value="Submit" id="btn-next-cafe-information" class="bgcolor">
                                                     {% comment %}<!--<a href="{% url 'forgot_password' %}" class="float-right">Forgot password</a>-->{% endcomment %}
                                                 </div>
                                             </div>
