--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,24 +5,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="widget widget-newsletter">
-                        <div class="widget-title">
-                            <h5>Subscribe to our Newsletter</h5>
-                        </div>
-                        <div class="fieldset">
-                            <form action="#">
-                                <div class="field-holder">
-                                    <label>
-                                        <i class=" icon-envelope3"></i>
-                                        <input type="text" class="field-input" placeholder=" Enter Your Email Address...">
-                                    </label>
-                                </div>
-                                <div class="field-holder btn-holder">
-                                    <input class="subscribe-btn bgcolor" type="submit" value="Sign Up">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -33,7 +15,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="copyright-inner">
                         <div class="copy-right">
-                            <p>© 2023 Coffee <a href="#">FD</a>
+                            <p>© 2022 Love For Coffee <a href="#">Ewa Kukla</a>
                             </p>
                         </div>
                     </div>
