--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
                         <div class="logo">
                             <figure>
                                 <a href="{% url 'home' %}" class="light-logo">
-                                    <img src="{% static 'logo/ForCoffeeLogo.png' %}" alt="ForCoffeeLogo" width='220'>
+                                    <img src="{% static 'logo/loveForCoffeeLogo.png' %}" alt="LoveForCoffeeLogo" width='220'>
                                 </a>
                             </figure>
                         </div> 
@@ -28,9 +28,14 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
-                            <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login</a> / 
+                            {% if user.is_authenticated %}
+                            <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" href="{% url 'myAccount' %}">My Account</a>
+                            <a class="cs-color cs-popup-joinus-btn login-popup text-danger" data-target="#sign-in" href="{% url 'logout' %}">Logout</a>
+                            {% else %}
+                            <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" href="{% url 'login' %}">Login</a> / 
                                 <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
-                                {% comment %}<a href="{% url 'registerCoffee' %}" class="get-start-btn"> Register Cafe </a>{% endcomment %}
+                                <a href="{% url 'registerCoffee' %}" class="get-start-btn"> Register Cafe </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
