--- a/templates/users/emails/admin_approval_email.html
+++ b/templates/users/emails/admin_approval_email.html
@@ -3,9 +3,9 @@
 Hi {{user.first_name}},
 
 {% if is_approved %}
-Congratulations! Your restaurant has been approved by our admin team. --loveForFood
+Congratulations! Your cafe has been approved by our admin team. --loveForCoffee
 {% else %}
-We're sorry! You are not eligible for publishing your food menu on our marketplace.For more information, please contact support@loveforfood.com. --loveForFood
+We're sorry! You are not eligible for publishing your coffee menu on our marketplace.For more information, please contact support@loveforcoffee.com. --loveForCoffee
 {% endif %}
 
 {% endautoescape %}
