coffee profile and valdiatar+

--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -23,7 +23,7 @@
                             <span class="cafe-title">{{coffee.coffee_name}}</span>
                             <div class="text">
                                 <i class="icon-location"></i>
-                                <p>{{coffee.user_profile.full_address }}</p>
+                                <p>{{coffee.user_profile.address }}</p>
                             </div>
                         </div>
                     </div>
