--- a/templates/coffee/coffeeitems_by_category.html
+++ b/templates/coffee/coffeeitems_by_category.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                    <!-- Load the sidebar here -->
-                   {% include 'includes/v_sidebar.html' %}
+                   {% include 'includes/c_sidebar.html' %}
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <div class="user-dashboard loader-holder">
@@ -49,7 +49,7 @@
                             {% else %}
                                 <h5 class="text-center">No coffee items found.</h5>
                                 <div class="text-center">
-                                    <a href="{% url 'add_coffee' %}" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true">&nbsp; Add coffee</i></a>
+                                    <a href="{% url 'add_category' %}" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true">&nbsp; Add coffee</i></a>
                                 </div>
                             {% endif %}
                             
