--- a/templates/coffee/cprofile.html
+++ b/templates/coffee/cprofile.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <!-- Load the sidebar here -->
-                    {% include 'includes/v_sidebar.html' %}
+                    {% include 'includes/c_sidebar.html' %}
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <div class="user-dashboard loader-holder">
@@ -102,17 +102,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                                    <div class="field-holder">
-                                                        <label>Latitude</label> {{profile_form.latitude}}
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                                    <div class="field-holder">
-                                                        <label>Longtitude</label> {{profile_form.longitude}}
-                                                    </div>
-                                                </div>
 
                                             </div>
                                         </li>
