--- a/templates/includes/c_sidebar.html
+++ b/templates/includes/c_sidebar.html
@@ -1,11 +1,11 @@
 <div class="user-account-nav user-account-sidebar">
     <div class="user-nav-list">
         <ul>
-            <li class="active"><a href="cafe-dashboard.html"><i class="icon-dashboard3"></i>Dashboard</a></li>
-            <li><a href="cafe-cafe.html"><i class="icon-add_shopping_cart"></i>My Orders</a></li>
-            <li><a href="cafe-menu-builder.html"><i class="icon-build"></i>Profile Settings</a></li>
-            <li><a href="cafe-orders.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
-            <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
+            <li class="{% if '/coffeeDashboard/' == request.path or '/coffee/' == request.path %}active{% endif %}"><a href="{% url 'coffeeDashboard' %}"><i class="icon-dashboard3"></i>Dashboard</a></li>
+            <li class="{% if 'profile' in request.path %}active{% endif %}"><a href="{% url 'cprofile' %}"><i class="icon-building"></i>My Cafe</a></li>
+            <li class="{% if 'menus' in request.path %}active{% endif %}"><a href="{% url 'menus' %}"><i class="icon-menu5"></i>Menus</a></li>
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Sign Out</a></li>
+
         </ul>
     </div>
 </div>
