--- a/templates/coffee/add_coffee.html
+++ b/templates/coffee/add_coffee.html
@@ -19,8 +19,8 @@
                             <hr>
                             <button class="btn btn-secondary" onclick="history.back()"><i class="fa fa-angle-left" aria-hidden="true"></i> Back</button>
                             <br><br>
-                            <h6>Modify Coffee Item</h6>
-                            <form action="{% url 'edit_coffee' coffee.id %}" method="POST" enctype="multipart/form-data">
+                            <h6>Add New Coffee Item</h6>
+                            <form action="{% url 'add_coffee' %}" method="POST" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="form-fields-set">
                                     <div class="row">
@@ -52,7 +52,6 @@
                                             <div class="field-holder">
                                                 <label>Image *</label>
                                                 {{form.image}}
-                                                <img src="{{ coffee.image.url }}" alt="Coffee Image" width="100"  class="mt-3">
                                             </div>
                                         </div>
                                           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -71,8 +70,8 @@
                                         {% endfor %}
                                     {% endif %}
                                 {% endfor %}
-                                <button type="submit" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i> Update</button>
-                                <a href="{% url 'delete_coffee' coffee.id %}" onclick="return confirm('Are you sure you want to delete this coffee item?')" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true"></i> Delete</a>
+
+                                <button type="submit" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i> Create</button>
                             </form>
                             <!-- render form -->
                         </div>
