--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -3032,7 +3032,7 @@ coffeebakery ki style.css mein footer k style k baad add karwin isy #footer.foot
 /*testimonial style end*/
 /* counter style */
 .counter-sec { width: 80%; margin: 0 auto; text-align: center; }
-.counter-holder .text-holder i { color: #4cce4a; font-size: 22px; margin-right: 15px; vertical-align: top; display: inline-block; }
+.counter-holder .text-holder i { color: #800080; font-size: 22px; margin-right: 15px; vertical-align: top; display: inline-block; }
 .counter-holder .text-holder strong { color: #505050; font-size: 22px; margin-right: 10px; display: inline-block; }
 .counter-holder .text-holder span { font-size: 18px; color: #505050; letter-spacing: 1px; display: inline-block; }
 /* counter style */
