--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -29,6 +29,7 @@
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
                             {% if user.is_authenticated %}
+                            <a  href="{% url 'bazaar' %}">bazaar</a>
                             <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" href="{% url 'myAccount' %}">My Account</a>
                             <a class="cs-color cs-popup-joinus-btn login-popup text-danger" data-target="#sign-in" href="{% url 'logout' %}">Logout</a>
                             {% else %}
